# liberado-anythingllm-mcp

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
src/: config.rs  lib.rs  main.rs  server.rs
