[package]
name = "liberado-anythingllm-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.89"

[dependencies]
turbomcp = { version = "3.1.4", features = ["stdio", "http"] }
reqwest = { version = "0.12", features = ["multipart", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
serial_test = "3"
